--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <section class="portfolio">
             <div class="portfolio-item">
-                <img src="imagem1.jpeg" alt="Imagem do projeto 1">
+                <a href="projeto1.html"><img src="imagem1.png" alt="Imagem do projeto 1"></a>
             </div>
             <div class="portfolio-item">
                 <img src="imagem2.jpeg" alt="Imagem do projeto 2">
