--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portfólio de Fulana</title>
+        <title>Portfólio da Jannyfer</title>
         <style>
             body{
                 font-family: Arial, sans-serif;
@@ -59,13 +59,13 @@
         </header>
 
         <section class="apresentacao">
-            <h1>Eu sou a <u>Fulana Fulaninha Fulaníssima,</u>
+            <h1>Eu sou a <u>Jannyfer Tamagno</u>
             <br>
-            uma desenvolvedora<u>Front-end</u>
+            uma desenvolvedora<u>Fullstack</u>
             <br>
             que mora em <u>Caxias do Sul</u>,RS.</h1>
             <div>
-                <p> Tudo / Portfólio / Contato / Blog</p>
+                <p> Home / Portfólio / Contato </p>
             </div>
         </section>
 
