alteração do f para J

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </head>
     <body>
         <header class="header">
-            <div class="logo">F</div>
+            <div class="logo">J</div>
             <div class="menu-icon">&#9776;</div>
         </header>
 
