--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
     </head>
     <body>
         <header class="header">
-            <div class="logo">J</div>
+            <div class="logo">F</div>
             <div class="menu-icon">&#9776;</div>
         </header>
 
         <section class="apresentacao">
             <h1>Eu sou a <u>Jannyfer Tamagno</u>
             <br>
-            uma desenvolvedora <u>Fullstack</u>
+            uma desenvolvedora<u>Fullstack</u>
             <br>
             que mora em <u>Caxias do Sul</u>,RS.</h1>
             <div>
