--- a/projeto1.html
+++ b/projeto1.html
@@ -7,6 +7,14 @@
     <title>Cards expandidos</title>
   </head>
   <body>
+    <header class="header">
+      <div class="logo">J</div>
+      <div class="menu-icon">&#9776;</div>
+    </header>
+    
+    <h1 class="">Cards expandidos</h1>
+
+    <section class="section">
     <div class="container">
       <div class="panel active" style="background-image: url('https://img.freepik.com/fotos-gratis/paisagem-natural-de-lavanda-digital_23-2150538378.jpg?t=st=1715864183~exp=1715867783~hmac=0eb6adeeacc5e907b7b433bce4ce3cddaf5593bd679fe032ed2072eace41dea9&w=1380')">
         <h3>Lago e Montanhas</h3>
@@ -25,6 +33,7 @@
       </div>
 
     </div>
+    </section>
 
     <script src="projeto1-script.js"></script>
   </body>
