update name class, remove project 1 and remove photo

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     </header>
 
     <!-- Seção de destaque (Hero) -->
-    <section class="hero" id="Sobre">
+    <section class="apresentacao" id="Sobre">
         <!-- Conteúdo do destaque -->
-        <div class="hero-content">
+        <div class="apresentacao-content">
             <!-- Título -->
             <h1>Olá, eu sou a Jannyfer Tamagno</h1>
             <br>
