update name class

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </nav>
     </header>
 
-    <!-- Seção de destaque (Hero) -->
+    <!-- Seção de destaque apresentacao -->
     <section class="apresentacao" id="Sobre">
         <!-- Conteúdo do destaque -->
         <div class="apresentacao-content">
