update padding navbar and name the btn

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
                 <li><a href="#Portfolio">Portfólio</a></li>
                 <!-- Link de contato via Whatsapp -->
                 <li><a href="https://wa.me/5554984451333?text=Ol%C3%A1%2C+estou+entrando+em+contato+atrav%C3%A9s+do+seu+site."
-                        class="btn">Contato
-                        Whatsapp</a></li>
+                        class="btn">Whatsapp</a></li>
             </ul>
         </nav>
     </header>
