--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
                 <li><a href="#Sobre">Sobre</a></li>
                 <li><a href="#Portfolio">Portfólio</a></li>
                 <!-- Link de contato via Whatsapp -->
-                <li><a href="https://wa.me/5554984451333?text=Ol%C3%A1%2C+estou+entrando+em+contato+atrav%C3%A9s+do+seu+site."
-                        class="btn">Whatsapp</a></li>
+                <li><a href="https://wa.me/5554984451333?text=Ol%C3%A1%2C+estou+entrando+em+contato+atrav%C3%A9s+do+seu+site." class="btn">Whatsapp</a></li>
             </ul>
         </nav>
     </header>
@@ -40,11 +39,7 @@
             <br>
             <!-- Parágrafo de apresentação -->
             <p>
-                Desenvolvedora fullstack apaixonada por tecnologia e soluções criativas. Com mais de 5 anos de
-                experiência em desenvolvimento web, tenho trabalhado com diversas tecnologias e plataformas para criar
-                soluções robustas e escaláveis que atendam às necessidades dos clientes. Amo o desafio de encontrar
-                soluções inovadoras e criativas para problemas complexos e estou sempre buscando aprender e crescer como
-                profissional.
+                Desenvolvedora fullstack apaixonada por tecnologia e soluções criativas. Com mais de 5 anos de experiência em desenvolvimento web, tenho trabalhado com diversas tecnologias e plataformas para criar soluções robustas e escaláveis que atendam às necessidades dos clientes. Amo o desafio de encontrar soluções inovadoras e criativas para problemas complexos e estou sempre buscando aprender e crescer como profissional.
             </p>
         </div>
     </section>
