--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="#Sobre">Sobre</a></li>
                 <li><a href="#Portfolio">Portfólio</a></li>
                 <!-- Link de contato via Whatsapp -->
-                <li><a href="https://wa.me/5554984451333?text=Ol%C3%A1%2C+estou+entrando+em+contato+atrav%C3%A9s+do+seu+site." class="btn">Whatsapp</a></li>
+                <li><a href="LinkAqui" class="btn">Whatsapp</a></li>
             </ul>
         </nav>
     </header>
