Commit com a turma

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <a href="#"><img src="assets/instagram.svg" alt="Instagram"></a>
         </div>
         <!-- Direitos autorais -->
-        <p>Todos os direitos reservados</p>
+        <p>Todos os direitos reservados.</p>
     </footer>
 </body>
 
